--- a/app/views/communities/sections/_electricity.html.haml
+++ b/app/views/communities/sections/_electricity.html.haml
@@ -1,3 +1,4 @@
+- grid_name = @community.grid.name.titleize
 - content_for :quicknav do
   %ul.nav.flex-column
     %li.nav-item
@@ -12,7 +13,7 @@
     = render 'communities/sections/electricity/production', community: @community
 - if @community.grid.capacities.any?
   .mb-3
-    = render 'communities/sections/electricity/grid_capacity', community: @community
+    = render 'communities/sections/electricity/grid_capacity', community: @community, grid_name: grid_name
   
 .row.g-3.row-cols-2
   - if @community.name
