--- a/app/views/communities/sections/electricity/_production.html.haml
+++ b/app/views/communities/sections/electricity/_production.html.haml
@@ -2,8 +2,7 @@
 .card
   %h4.card-header Production
   .card-body.p-3
-    %p= grid_name
-    %p.text-muted.small This data is generated at the grid level, not community-specific.
+    = render 'communities/shared/grid_info', community_name: @community.name, grid_name: grid_name
     
     .d-flex.justify-content-between.align-items-center
       .nav.nav-tabs
