Clean up card classes, add tabs to view chart and table

--- a/app/views/communities/shared/_grid_info.html.haml
+++ b/app/views/communities/shared/_grid_info.html.haml
@@ -1,4 +1,4 @@
-.d-flex.align-items-center.bg-light.p-3.rounded.shadow-sm.mb-3
+.d-flex.align-items-center.bg-body-secondary.p-3.rounded.mb-3
   .grid-info
     %h5= grid_name.titleize
     %p
