--- a/app/views/communities/sections/electricity/_grid_capacity.html.haml
+++ b/app/views/communities/sections/electricity/_grid_capacity.html.haml
@@ -1,59 +1,67 @@
 - stats = @community.grid.capacities.capacity_stats
 - chart_title = "#{grid_name} Capacity by Fuel Type (#{stats[:year]})"
 
-.card
-  %h4.card-header Grid Capacity
-  .card-body.p-3
+%h4.mb-3 Grid Capacity
+.mb-3
+  = render 'communities/shared/grid_info', community_name: @community.name, grid_name: grid_name
 
-    = render 'communities/shared/grid_info', community_name: @community.name, grid_name: grid_name
+  .bg-body-secondary.p-3.rounded.mb-3.d-flex.flex-wrap.justify-content-center.gap-4
+    .d-flex.align-items-center
+      %i.bi-bar-chart-line-fill.me-2
+      %strong.me-1 Total:
+      %span.text-primary= "#{stats[:total_capacity]} MW"
 
-    .row.justify-content-center.bg-light.p-3.rounded.shadow-sm.m-3
-      .col-auto
-        %i.bi-bar-chart-line-fill.mx-1
-        %strong.mx-1 Total:
-        %span.text-primary= "#{stats[:total_capacity]} MW"
+    .d-flex.align-items-center
+      %i.bi-bullseye.me-2
+      %strong.me-1 Average:
+      %span.text-secondary= "#{stats[:average_capacity]} MW" 
 
-      .col-auto
-        %i.bi-bullseye-circle.mx-1
-        %strong.mx-1 Average:
-        %span.text-secondary= "#{stats[:average_capacity]} MW" 
+    .d-flex.align-items-center
+      %i.bi-arrow-up-right-circle.me-2
+      %strong.me-1 Max:
+      %span.text-success= "#{stats[:max_capacity]} MW" 
+      %small.text-muted= "(#{stats[:max_fuel_type]})"
 
-      .col-auto
-        %i.bi-arrow-down-right-circle.mx-1
-        %strong.mx-1 Max:
-        %span.text-success= "#{stats[:max_capacity]} MW" 
-        %small.text-muted= "(#{stats[:max_fuel_type]})"
+    .d-flex.align-items-center
+      %i.bi-arrow-down-right-circle.me-2
+      %strong.me-1 Min:
+      %span.text-danger= "#{stats[:min_capacity]} MW" 
+      %small.text-muted= "(#{stats[:min_fuel_type]})"
 
-      .col-auto
-        %i.bi-arrow-down-right-circle.mx-1
-        %strong.mx-1 Min:
-        %span.text-danger= "#{stats[:min_capacity]} MW" 
-        %small.text-muted= "(#{stats[:min_fuel_type]})"
+    .d-flex.align-items-center
+      %i.bi-calendar.me-2
+      %strong.me-1 Year:
+      %span.text-muted= stats[:year]
 
-      .col-auto
-        %i.bi-calendar.mx-1
-        %strong.mx-1 Year:
-        %span.text-muted= stats[:year]
+  / Tabs
+  .d-flex.align-items-center.mt-4
+    .nav.nav-tabs
+      %li.nav-item
+        = link_to "Chart", "#chart", class: "nav-link active", data: { bs_toggle: "tab" }
+      %li.nav-item
+        = link_to "Data", "#data", class: "nav-link", data: { bs_toggle: "tab" }
 
-    // Chart View Section
-    .row.mt-4
-      .col-md-6
-        = column_chart capacity_yearly_community_charts_path(community_id: @community.id), title: chart_title, xtitle: "Fuel Type", ytitle: "Capacity", suffix: "MW", download: { background: "#ffffff", filename: chart_title.parameterize, format: "png" }
+  / Tab Content
+  .tab-content.mt-3
+    #chart.tab-pane.fade.show.active
+      = pie_chart capacity_yearly_community_charts_path(community_id: @community.id), 
+        title: chart_title, 
+        suffix: "MW", 
+        donut: true, 
+        download: { background: "#ffffff", filename: chart_title.parameterize, format: "png" }, 
+        library: { plugins: { legend: { title: { display: true, text: "Fuel Type"}, display: true, position: 'left' } } }
 
-      .col-md-6
-        = pie_chart capacity_yearly_community_charts_path(community_id: @community.id), title: chart_title, suffix: "MW", donut: true, download: { background: "#ffffff", filename: chart_title.parameterize, format: "png" }, library: { plugins: { legend: { title: { display: true, text: "Fuel Type"}, display: true, position: 'right' } } }
-
-    // Tabular Data View Section
-    %div{ data: { controller: 'datatables', datatables: { order_value: [1, 'desc'] } }}
-      %table.table.table-striped.border{ data: { datatables_target: 'table' } }
-        %thead
-          %tr
-            %th Fuel Type
-            %th Capacity (MW)
-            %th Year
-        %tbody
-          - @community.grid.capacities.where(year: stats[:year]).each do |capacity|
+    #data.tab-pane.fade
+      %div{ data: { controller: 'datatables', datatables: { order_value: [1, 'desc'] } }}
+        %table.table.table-striped.border{ data: { datatables_target: 'table' } }
+          %thead
             %tr
-              %td= capacity.fuel_type
-              %td= capacity.capacity_mw
-              %td= capacity.year
+              %th Fuel Type
+              %th Capacity (MW)
+              %th Year
+          %tbody
+            - @community.grid.capacities.where(year: stats[:year]).each do |capacity|
+              %tr
+                %td= capacity.fuel_type
+                %td= capacity.capacity_mw
+                %td= capacity.year
