Update scope name, remove grid_name and commmunity as parameters for parital

--- a/app/views/communities/sections/_electricity.html.haml
+++ b/app/views/communities/sections/_electricity.html.haml
@@ -9,7 +9,7 @@
 
 - if @community.grid
   .mb-3
-    = render 'communities/sections/electricity/production', community: @community
+    = render 'communities/sections/electricity/production'
   
 .row.g-3.row-cols-2
   - if @community.name
