--- a/app/views/communities/sections/electricity/_production.html.haml
+++ b/app/views/communities/sections/electricity/_production.html.haml
@@ -1,8 +1,7 @@
-- grid_name = @community.grid.name.titleize
 .card
   %h4.card-header Production
   .card-body.p-3
-    = render 'communities/shared/grid_info', community_name: @community.name, grid_name: grid_name
+    = render 'communities/shared/grid_info'
     
     .d-flex.justify-content-between.align-items-center
       .nav.nav-tabs
@@ -14,6 +13,6 @@
 
     .tab-content
       #monthly.tab-pane.fade.show.active
-        = render "communities/sections/electricity/production/monthly", community: @community, grid_name: grid_name
+        = render "communities/sections/electricity/production/monthly"
 
       #yearly.tab-pane.fade
