--- a/app/views/communities/shared/_grid_info.html.haml
+++ b/app/views/communities/shared/_grid_info.html.haml
@@ -1,9 +1,9 @@
-.d-flex.align-items-center.bg-light.p-3.rounded.shadow-sm.mb-3
+.d-flex.align-items-center.bg-body-secondary.p-3.rounded.mb-3
   .grid-info
-    %h5= grid_name.titleize
+    %h5= @community.grid.name.titleize
     %p
       %i.bi-geo-alt-fill.me-1
-      = "#{community_name} is part of the "
-      %strong= grid_name.titleize
+      = "#{@community.name} is part of the "
+      %strong= @community.grid.name.titleize
       = " grid."
     %p.text-muted.small.mb-0 Data reflects the overall grid, which may serve one or multiple communities.
