--- a/app/views/communities/sections/electricity/_production.html.haml
+++ b/app/views/communities/sections/electricity/_production.html.haml
@@ -1,18 +1,22 @@
-.card
-  %h4.card-header Production
-  .card-body.p-3
-    = render 'communities/shared/grid_info'
+%h4.mb-3 Production
+.mb-3
+  = render 'communities/shared/grid_info'
     
-    .d-flex.justify-content-between.align-items-center
-      .nav.nav-tabs
-        - if @community.grid.monthly_generations.any?
-          %li.nav-item
-            = link_to "Monthly", "#monthly", class: "nav-link active", data: { bs_toggle: "tab" }
+  .d-flex.justify-content-between.align-items-center
+    .nav.nav-tabs
+      - if @community.grid.monthly_generations.any?
         %li.nav-item
-          = link_to "Yearly", "#yearly", class: "nav-link", data: { bs_toggle: "tab" }
+          = link_to "Monthly Chart", "#monthly-chart", class: "nav-link active", data: { bs_toggle: "tab" }
+        %li.nav-item
+          = link_to "Monthly Data", "#monthly-data", class: "nav-link", data: { bs_toggle: "tab" }
+      %li.nav-item
+        = link_to "Yearly", "#yearly", class: "nav-link", data: { bs_toggle: "tab" }
 
-    .tab-content
-      #monthly.tab-pane.fade.show.active
-        = render "communities/sections/electricity/production/monthly"
+  .tab-content
+    #monthly-chart.tab-pane.fade.show.active
+      = render "communities/sections/electricity/production/monthly_chart"
 
-      #yearly.tab-pane.fade
+    #monthly-data.tab-pane.fade
+      = render "communities/sections/electricity/production/monthly_data"
+
+    #yearly.tab-pane.fade
