Update production_monthly to display multiseries (year)

--- a/app/views/communities/sections/electricity/production/_monthly_chart.html.haml
+++ b/app/views/communities/sections/electricity/production/_monthly_chart.html.haml
@@ -1,4 +1,4 @@
-- chart_title = "#{@community.grid.name.titleize} Net Generation by Month (#{@community.grid.monthly_generations.latest_year})"
+- chart_title = "#{@community.grid.name.titleize} Net Generation by Month"
 
 = render 'communities/sections/electricity/production/monthly_stats'
 
