--- a/app/views/communities/sections/electricity/_production.html.haml
+++ b/app/views/communities/sections/electricity/_production.html.haml
@@ -14,6 +14,7 @@
 
   .tab-content
     #monthly-chart.tab-pane.fade.show.active
+      = render 'communities/sections/electricity/production/monthly_stats'
       = render "communities/sections/electricity/production/monthly_chart"
 
     #monthly-data.tab-pane.fade
