--- a/app/views/communities/sections/background/_election_districts.html.haml
+++ b/app/views/communities/sections/background/_election_districts.html.haml
@@ -1,7 +1,21 @@
-.placeholder-card
-  %h4 Election Districts
-  .placeholder-map 
-  %p
-    This section provides an overview of the election districts within the community.
-    Please replace this placeholder text with actual content.
-        
+%h4 Election Districts
+%p This section provides an overview of the election districts within the community.
+
+
+
+/ Navigation Tabs
+.d-flex.justify-content-between.align-items-center.mt-4
+  .nav.nav-tabs
+    %li.nav-item
+      = link_to "House Districts", "#house", class: "nav-link active", data: { bs_toggle: "tab" }
+    %li.nav-item
+      = link_to "Senate Districts", "#senate", class: "nav-link", data: { bs_toggle: "tab" }
+
+/ Tab Content
+.tab-content.mt-3
+  #house.tab-pane.fade.show.active
+    = area_map house_districts_community_maps_path(@community), tooltips: {hover: true}
+    
+    
+  #senate.tab-pane.fade
+    
