--- a/app/views/communities/sections/background/_election_districts.html.haml
+++ b/app/views/communities/sections/background/_election_districts.html.haml
@@ -1,8 +1,6 @@
 %h4 Election Districts
 %p This section provides an overview of the election districts within the community.
 
-
-
 / Navigation Tabs
 .d-flex.justify-content-between.align-items-center.mt-4
   .nav.nav-tabs
@@ -14,8 +12,7 @@
 / Tab Content
 .tab-content.mt-3
   #house.tab-pane.fade.show.active
-    = area_map house_districts_community_maps_path(@community), tooltips: {hover: true}
-    
-    
+    = area_map house_districts_community_maps_path(@community), tooltips: {hover: true}, controls: true
   #senate.tab-pane.fade
+    = area_map senate_districts_community_maps_path(@community), tooltips: {hover: false}, controls: true
     
