--- a/app/views/metadata/search.html.haml
+++ b/app/views/metadata/search.html.haml
@@ -3,5 +3,7 @@
     PLACEHOLDER
   .col-md-8
     = render 'search_form'
-
-    = render partial: 'metadata', collection: @metadata, as: :metadatum
+    - if @metadata.any?
+      = render partial: 'metadata', collection: @metadata, as: :metadatum
+    - else 
+      %p No results found. Try adjusting your search or using different keywords
