--- a/app/views/communities/sections/background/election_districts/_district_overview.html.haml
+++ b/app/views/communities/sections/background/election_districts/_district_overview.html.haml
@@ -1,26 +1,8 @@
-.d-flex.bg-body-secondary.rounded.p-3.mb-3
-  .d-flex.align-items-center.me-2
-    %strong.mb-0 Election Region
+= render "communities/sections/background/election_districts/district_badge_group", label: "Election Region", items: @community.election_regions, color: "secondary" do |region|
+  = region
 
-  .d-flex.flex-wrap.gap-3
-    - @community.communities_legislative_districts.map(&:election_region).uniq.each do |region|
-      .badge.px-3.py-2.text-bg-secondary.rounded-pill.fs-6
-        = region
-        
-.d-flex.bg-body-secondary.rounded.p-3.mb-3
-  .d-flex.align-items-center.me-2
-    %strong.mb-0 House Districts
+= render "communities/sections/background/election_districts/district_badge_group", label: "House Districts",  items: @community.house_districts.distinct,  color: "success" do |district|
+  = district.district
 
-  .d-flex.flex-wrap.gap-3
-    - @community.house_districts.distinct.each do |district|
-      .badge.px-3.py-2.text-bg-success.rounded-pill.fs-6
-        = district.district
-
-.d-flex.bg-body-secondary.rounded.p-3.mb-3
-  .d-flex.align-items-center.me-2
-    %strong.mb-0 Senate Districts
-
-  .d-flex.flex-wrap.gap-3
-    - @community.senate_districts.distinct.each do |district|
-      .badge.px-3.py-2.text-bg-primary.rounded-pill.fs-6
-        = district.district
+= render "communities/sections/background/election_districts/district_badge_group", label: "Senate Districts",  items: @community.senate_districts.distinct,  color: "primary" do |district|
+  = district.district
