Add highlighted records and topics
Signed-off-by: Will Fisher <whfisher@alaska.edu>

--- a/app/views/datasets/show.html.haml
+++ b/app/views/datasets/show.html.haml
@@ -11,7 +11,7 @@
         Download 
         = @dataset.format
 
-      = link_to :back, class: "btn btn-primary" do 
+      = link_to metadatum_path(@metadata), class: "btn btn-primary" do 
         %i.bi.bi-arrow-left
         Back
 
