--- a/app/views/metadata/_metadata.html.haml
+++ b/app/views/metadata/_metadata.html.haml
@@ -11,5 +11,7 @@
       %span.badge.bg-secondary= tag
 
   .d-flex.justify-content-between.align-items-center
-    = link_to "View", metadatum, class: "btn btn-primary" 
     .text-muted.small Last Updated: #{metadatum.updated_at}
+    = link_to metadatum, class: "btn btn-primary" do 
+      View
+      %i.bi.bi-arrow-right
