--- a/app/views/metadata/index.html.haml
+++ b/app/views/metadata/index.html.haml
@@ -1,20 +1,19 @@
-.card
-  %h1.text-center Explore Data
+.row.justify-content-center.mb-3
+  .card
+    %h1.text-center Explore Data
 
-  .card-body
-    .d-flex.justify-content-center.gap-4.mb-3
-      = link_to "#{Community.count} Communities", communities_path, class: "btn btn-lg btn-secondary"
-      = link_to "Partners", "#", class: "btn btn-lg btn-secondary"
-      = link_to "View All Datasets", search_metadata_path, class: "btn btn-lg btn-primary"
+    .card-body
+      .d-flex.justify-content-center.gap-4.mb-3
+        = link_to "#{Community.count} Communities", communities_path, class: "btn btn-lg btn-secondary"
+        = link_to "View All Datasets", search_metadata_path, class: "btn btn-lg btn-primary"
 
-    .row.justify-content-center
-      .col-lg-9
-        = render 'search_form', simple: true
-
--# .row.mt-5.g-4
--#   .col-lg-4
--#     = render 'by_location'
--#   .col-lg-4
--#     = render 'by_category'
--#   .col-lg-4
--#     = render 'featured_datasets'
+      .row.justify-content-center
+        .col
+          = render 'search_form', simple: true
+.d-grid.g-2.mb-3
+  = render 'by_category'
+.row
+  .col-lg-6
+  .col-lg-6
+    %h2 Featured Datasets
+    = render partial: 'metadata', collection: @highlighted, as: :metadatum
