Rename category partial to topic
Signed-off-by: Will Fisher <whfisher@alaska.edu>

--- a/app/views/metadata/index.html.haml
+++ b/app/views/metadata/index.html.haml
@@ -11,7 +11,7 @@
         .col
           = render 'search_form', simple: true
 .d-grid.g-2.mb-3
-  = render 'by_category'
+  = render 'by_topic'
 .row
   .col-lg-6
   .col-lg-6
