--- a/app/views/metadata/_by_topic.html.haml
+++ b/app/views/metadata/_by_topic.html.haml
@@ -1,6 +1,6 @@
 .row.justify-content-center.g-4
   - @topics.each do |topic|
-    .col.d-grid
-      = link_to search_metadata_path(topic: topic.name.downcase), class: "btn btn-secondary" do
+    .col-2.d-grid
+      = link_to search_metadata_path(topic: topic.name.downcase), class: "btn btn-outline-secondary" do
         %i.bi.fs-1{ class: topic_icon(topic.name) }
-        %div= topic
+        %div= topic.name.titleize
