--- a/app/views/metadata/_metadata.html.haml
+++ b/app/views/metadata/_metadata.html.haml
@@ -12,6 +12,6 @@
 
   .d-flex.justify-content-between.align-items-center
     .text-muted.small Last Updated: #{metadatum.updated_at}
-    = link_to metadatum, class: "btn btn-primary" do 
+    = link_to metadatum, class: "btn btn-aedg-primary" do 
       View
       %i.bi.bi-arrow-right
