--- a/app/views/metadata/_search_form.html.haml
+++ b/app/views/metadata/_search_form.html.haml
@@ -3,17 +3,17 @@
   - if simple
     .input-group.input-group-lg
       = f.text_field :search, value: @search[:search], class: 'form-control col', placeholder: 'Search Keywords, Datasets...'
-      = f.submit 'Search', class: 'btn btn-secondary'
+      = f.submit 'Search', class: 'btn btn-aedg-primary'
   - unless simple
     .mb-3.row
       = f.text_field :search, value: @search[:search], class: 'form-control col', placeholder: 'Search Keywords, Datasets...'
     .mb-3.row
       = f.label :topic, 'Topic', class: 'col-form-label col-sm-3'
-      = f.select :topic, options_for_select(@topics.map { |t| [t.name, t.name.downcase] }, @search[:topic]), { include_blank: 'All Topics' }, class: 'form-select col', id: 'topic'
+      = f.select :topic, options_for_select(@topics.map { |t| [t.name.titleize, t.name.downcase] }, @search[:topic]), { include_blank: 'All Topics' }, class: 'form-select col', id: 'topic'
 
     .mb-3.row
       = f.label :order, 'Order By', class: 'col-form-label col-sm-3'
       = f.select :order, options_for_select([['Most Relevant', 'relevance'], ['Newest', 'newest'], ['Oldest', 'oldest']], @search[:order]), {}, class: 'form-select col', id: 'order'
 
     .text-end
-      = f.submit 'Search', class: 'btn btn-secondary btn-lg'
+      = f.submit 'Search', class: 'btn btn-aedg-primary btn-lg'
