--- a/app/views/metadata/show.html.haml
+++ b/app/views/metadata/show.html.haml
@@ -1,10 +1,10 @@
 .row
   .col-md-3
     .d-grid.gap-3
-      = link_to '#', class: 'btn btn-secondary' do
+      = link_to '#', class: 'btn btn-primary' do
         %i.bi.bi-save
         Download
-      = link_to metadata_path, class: "btn btn-primary" do 
+      = link_to metadata_path, class: "btn btn-secondary" do 
         %i.bi.bi-arrow-left
         Back
   .col-md-9
