--- a/app/views/metadata/show.html.haml
+++ b/app/views/metadata/show.html.haml
@@ -4,7 +4,7 @@
       = link_to '#', class: 'btn btn-primary' do
         %i.bi.bi-save
         Download
-      = link_to metadata_path, class: "btn btn-secondary" do 
+      = link_to search_metadata_path, class: "btn btn-secondary" do 
         %i.bi.bi-arrow-left
         Back
   .col-md-9
