--- a/app/views/communities/sections/background/_election_districts.html.haml
+++ b/app/views/communities/sections/background/_election_districts.html.haml
@@ -4,20 +4,16 @@
 
 / Navigation Tabs
 .d-flex.justify-content-between.align-items-center.mt-4
-  .nav.nav-tabs{ data: { controller: 'maps' } }
+  .nav.nav-tabs
     %li.nav-item
-      = link_to "House Districts Map", "#house", class: "nav-link active", data: { bs_toggle: "tab", map_tab: true}
-    %li.nav-item
-      = link_to "Senate Districts Map", "#senate", class: "nav-link", data: { bs_toggle: "tab", map_tab: true}
+      = link_to "Districts Map", "#districtsMap", class: "nav-link active", data: { bs_toggle: "tab"}
     %li.nav-item 
       = link_to "District Data", "#districtData", class: "nav-link", data: { bs_toggle: "tab" }
 
 / Tab Content
 .tab-content.mt-3
-  #house.tab-pane.fade.show.active
-    = area_map house_districts_community_maps_path(@community), tooltips: {hover: false}, controls: true
-  #senate.tab-pane.fade
-    = area_map senate_districts_community_maps_path(@community), tooltips: {hover: false}, controls: true
+  #districtsMap.tab-pane.fade.show.active
+    #map{ data: { controller: "mapbox", mapbox_token_value: ENV['MAPBOX_API_TOKEN'] }}
 
   #districtData.tab-pane.fade
     = render "communities/sections/background/election_districts/district_data"
