--- a/app/views/communities/sections/background/_election_districts.html.haml
+++ b/app/views/communities/sections/background/_election_districts.html.haml
@@ -13,7 +13,7 @@
 / Tab Content
 .tab-content.mt-3
   #districtsMap.tab-pane.fade.show.active
-    #map{ data: { controller: "mapbox", mapbox_token_value: ENV['MAPBOX_API_TOKEN'] }}
+    #map{ data: { controller: "mapbox", mapbox_data_url_value: house_districts_community_maps_path(@community), mapbox_token_value: ENV['MAPBOX_API_TOKEN'] }, style: "width: 100%; height: 500px;"}
 
   #districtData.tab-pane.fade
     = render "communities/sections/background/election_districts/district_data"
