--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -8,6 +8,7 @@
     = csp_meta_tag
     = stylesheet_link_tag "application", "data-turbo-track": "reload"
     = javascript_importmap_tags
+    %link{rel: 'stylesheet', href: href='https://api.mapbox.com/mapbox-gl-js/v3.10.0/mapbox-gl.css' }
   %body
     = render 'header'
     .container-fluid
