--- a/app/views/communities/sections/_background.html.haml
+++ b/app/views/communities/sections/_background.html.haml
@@ -7,7 +7,8 @@
     .col= render 'communities/sections/background/geography', community: @community
   - if @community.population
     .col-md-6.col-12= render 'communities/sections/background/population_employment'
-  - if @community.population
+  - if @community.population_age_sexes
     .col-md-6.col-12= render 'communities/sections/background/population_age_sex'
+    .col-md-6.col-12= render 'communities/sections/background/population_age_sex_datatable'
   - if @community.name
     .col-md-6.col-12= render 'communities/sections/background/election_districts', community: @community
