add pie gender distribution chart, add title to datatables. renamed chart partical so we know its a chart

--- a/app/views/communities/sections/background/_population_age_sex_datatable.html.haml
+++ b/app/views/communities/sections/background/_population_age_sex_datatable.html.haml
@@ -1,4 +1,5 @@
 %div{ data: { controller: 'datatables', datatables: { order_value: [3, 'asc'], scroll_x: true } } }
+  %h5.text-center.mt-2 Populations Ages and Sexes Table
   %table.table.table-stripped.border{ data: { datatables_target: 'table' } }
     %thead
       %tr
