--- a/app/views/communities/sections/background/_geography.html.haml
+++ b/app/views/communities/sections/background/_geography.html.haml
@@ -1,28 +1,32 @@
-.placeholder-card
-  %h4 Geography
-  .placeholder-map
-  %p
-    This section provides an overview of the geographical aspects of the community.
-    Please replace this placeholder text with actual content.
+%h4 Geography
+#communityLocationMapWrapper.tab-pane.fade.show.active{
+  data: {
+    controller: "maps",
+    maps_token_value: ENV['MAPBOX_API_TOKEN'],
+    maps_map_center_value: [@community.longitude, @community.latitude],
+    maps_markers_value: [[@community.longitude, @community.latitude]]
+  }
+}
+  #communityLocationMap.rounded{ data: { maps_target: "map" }, style: "width: 100%; height: 500px;" }
 
-  %table.table.table-bordered.table-striped
-    %tbody
+%table.table.table-bordered.table-striped
+  %tbody
+    %tr
+      %th Borough
+      %td= @community.borough.name
+    %tr
+      %th Regional Corporation
+      %td= @community.regional_corporation.name
+    - if @community.grid.present?
       %tr
-        %th Borough
-        %td= @community.borough.name
-      %tr
-        %th Regional Corporation
-        %td= @community.regional_corporation.name
-      - if @community.grid.present?
-        %tr
-          %th Grid
-          %td= @community.grid.name.titleize
-      %tr
-        %th Location
-        %td= @community.location
-      %tr
-        %th Latitude
-        %td= @community.latitude
-      %tr
-        %th Longitude
-        %td= @community.longitude
+        %th Grid
+        %td= @community.grid.name.titleize
+    %tr
+      %th Location
+      %td= @community.location
+    %tr
+      %th Latitude
+      %td= @community.latitude
+    %tr
+      %th Longitude
+      %td= @community.longitude
